# openmpi-playground

./: CMakeLists.txt  README.md  avg.cpp  dijkstra.cpp  hello.cpp  loop.cpp  mybarrier.cpp  mybroadcast.cpp  prank.cpp  randomwalk.cpp  reduce_avg.cpp
